Added style.css, image, paragraph

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <title>My first github pages site</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>
-        Hello World
+        This is my first GitHub pages site
     </h1>
+    <img src="chatgpt-be-like-that-sometimes-v0-gwqokn6fak2e1.webp"></img>
+    <p>
+        Hello world this is Wes
+    </p>
 </body>
 
 
